@@ -1,3 +1,8 @@
+Thu Jan 29 00:59:03 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtktreemodelfilter.c (gtk_tree_model_filter_rows_reordered): Don't leak
+	path if we bail out early.  (#132505, Christian Persch)
+
 Thu Jan 29 00:48:47 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkactiongroup.c (gtk_action_group_add_toggle_actions_full): 
